--- a/bigbluebutton-client/src/org/bigbluebutton/main/views/MainApplicationShell.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/main/views/MainApplicationShell.mxml
@@ -80,6 +80,7 @@
 			import org.bigbluebutton.main.events.ShortcutEvent;
 			import org.bigbluebutton.main.events.SuccessfulLoginEvent;
 			import org.bigbluebutton.main.model.LayoutOptions;
+			import org.bigbluebutton.main.model.NetworkStatsData;
 			import org.bigbluebutton.main.model.users.events.ConnectionFailedEvent;
 			import org.bigbluebutton.util.i18n.ResourceUtil;
 			import org.bigbluebutton.util.logging.Logger;
@@ -120,24 +121,29 @@
       [Bindable] private var footerHeight:Number = 20;
       
       [Bindable] private var isTunneling:Boolean = false;
+			
+			[Bindable] private var _bandwidthConsumedUp:String = "-";
+			[Bindable] private var _bandwidthConsumedDown:String = "-";
+			private var _updateBandwidthTimer:Timer = new Timer(1000);
       
 			public function initOptions(e:Event):void {
 				layoutOptions = new LayoutOptions();
 				layoutOptions.parseOptions();
 				showToolbarOpt = layoutOptions.showToolbar;
 				if (!showToolbarOpt) {
-          toolbarHeight = 0;
-          toolbarPaddingTop = 0;
-        }
+					toolbarHeight = 0;
+					toolbarPaddingTop = 0;
+				}
 				toolbar.displayToolbar();
-        
-        showFooterOpt = layoutOptions.showFooter;
-        if (!showFooterOpt) {
-          footerHeight = 0;
-        }
-			
-        
-      }
+    
+				showFooterOpt = layoutOptions.showFooter;
+				if (!showFooterOpt) {
+					footerHeight = 0;
+				}
+				
+				_updateBandwidthTimer.addEventListener(TimerEvent.TIMER, updateBandwidthTimerHandler);
+				_updateBandwidthTimer.start();
+			}
 			
 			protected function initializeShell():void {	
 				globalDispatcher = new Dispatcher();	
@@ -360,24 +366,34 @@
 
 			private var networkStatsWindow:NetworkStatsWindow = new NetworkStatsWindow();
 
-			private function openNetworkStatsWindow(e:Event = null):void {
-				/*var btnPosition:Point = new Point(btnNetwork.x, btnNetwork.y);
-				var btnPositionOnGlobal:Point = btnNetwork.localToGlobal(btnPosition);
-				var windowPosition:Point = networkStatsWindow.globalToLocal(btnPositionOnGlobal);
-				
-				windowPosition.x += btnNetwork.width + 10;
-				windowPosition.y -= networkStatsWindow.height - 10;
-
-				networkStatsWindow.x = windowPosition.x;
-				networkStatsWindow.y = windowPosition.y;*/
-
-				networkStatsWindow.appear();
+			private function openNetworkStatsWindow(event:MouseEvent):void {
+				event.target.addEventListener(MouseEvent.MOUSE_MOVE, updateNetworkStatsWindowPosition);
+				networkStatsWindow.appear(this);
 			}
 			
-			private function closeNetworkStatsWindow(e:Event = null):void {
+			private function updateNetworkStatsWindowPosition(event:MouseEvent):void {
+				var mousePosition:Point = new Point(event.localX, event.localY);
+				//LogUtil.debug("mouse position: " + mousePosition.x + " " + mousePosition.y);
+				
+				var mouseGlobal:Point = event.target.localToGlobal(mousePosition);
+				//LogUtil.debug("mouse global position: " + mouseGlobal.x + " " + mouseGlobal.y);
+				
+				var windowPosition:Point = this.globalToContent(mouseGlobal);
+				//LogUtil.debug("window position: " + windowPosition.x + " " + windowPosition.y);
+				
+				networkStatsWindow.x = windowPosition.x - networkStatsWindow.width - 10;
+				networkStatsWindow.y = windowPosition.y - networkStatsWindow.height - 10;
+			}
+			
+			private function closeNetworkStatsWindow(event:MouseEvent):void {
+				event.target.removeEventListener(MouseEvent.MOUSE_MOVE, updateNetworkStatsWindowPosition);
 				networkStatsWindow.disappear();
 			}
 
+	        private function updateBandwidthTimerHandler(e:TimerEvent):void {
+				_bandwidthConsumedDown = NetworkStatsData.getInstance().formattedCurrentConsumedDownBW;
+				_bandwidthConsumedUp = NetworkStatsData.getInstance().formattedCurrentConsumedUpBW;
+	        }
 		]]>
 	</mx:Script>
 			
@@ -391,10 +407,10 @@
 	  <mx:Label text="{ResourceUtil.getInstance().getString('bbb.mainshell.copyrightLabel2',[appVersion])}" id="copyrightLabel2"/>
 	 	<mx:Spacer width="20"/>
 		<mx:Spacer width="100%"/> 
-    <mx:Label text="{isTunneling ? '[Tunnelling]' : ''}" id="isTunnellingLbl"/>
+		<mx:Label text="{isTunneling ? '[Tunnelling]' : ''}" id="isTunnellingLbl"/>
+		<mx:Label text="[{ResourceUtil.getInstance().getString('bbb.bwmonitor.upload.short')}: {_bandwidthConsumedUp} | {ResourceUtil.getInstance().getString('bbb.bwmonitor.download.short')}: {_bandwidthConsumedDown}]" mouseOver="openNetworkStatsWindow(event)" mouseOut="closeNetworkStatsWindow(event)" id="lblNetworkStats"/>
 		<mx:Button width="20" height="20" visible="{layoutOptions.showLogButton}" toolTip="{ResourceUtil.getInstance().getString('bbb.mainshell.logBtn.toolTip')}" id="logBtn" icon="{logs_icon}" click="openLogWindow()" />
 		<!-- mx:Button width="20" height="20" visible="{layoutOptions.showResetLayout}" toolTip="{ResourceUtil.getInstance().getString('bbb.mainshell.resetLayoutBtn.toolTip')}" id="btnResetLayout" icon="{reset_layout_icon}" click="resetLayout()" /-->
-		<mx:Button id="btnNetwork" width="20" height="20" mouseOver="openNetworkStatsWindow()" mouseOut="closeNetworkStatsWindow()" />		
 		<mx:HBox id="addedBtns" />
 	</mx:ControlBar>
 </mx:VBox>
