--- a/bigbluebutton-client/src/org/bigbluebutton/main/views/NetworkStatsWindow.mxml
+++ b/bigbluebutton-client/src/org/bigbluebutton/main/views/NetworkStatsWindow.mxml
@@ -25,7 +25,7 @@
 <MDIWindow xmlns="flexlib.mdi.containers.*" 
 		xmlns:mx="http://www.adobe.com/2006/mxml" 
 		xmlns:mate="http://mate.asfusion.com/"
-		title="Network monitor" 
+		title="{ResourceUtil.getInstance().getString('bbb.bwmonitor.title')}" 
 		creationComplete="onCreationComplete()"
 		resizable="false"
 		showCloseButton="false"
@@ -44,39 +44,34 @@
 			import org.bigbluebutton.common.events.OpenWindowEvent;
 			import org.bigbluebutton.common.LogUtil;
 			import org.bigbluebutton.main.model.NetworkStatsData;
+			import org.bigbluebutton.util.i18n.ResourceUtil;
 		
+			import mx.core.IFlexDisplayObject;
 			import mx.effects.Fade;
 			import mx.events.EffectEvent;
-			import mx.formatters.NumberFormatter;
+			import mx.managers.PopUpManager;
 
 			private var _globalDispatcher:Dispatcher = new Dispatcher();
 			private var _updateTimer:Timer = new Timer(1000);
-			private var _numberFormatter:NumberFormatter = new NumberFormatter();
 		
 			private function onCreationComplete():void {
 				this.windowControls.maximizeRestoreBtn.visible = false;
 				this.windowControls.minimizeBtn.visible = false;
 				
-				this.x = parent.width - this.width;
-				this.y = parent.height - this.height;
-				
-				_numberFormatter.precision = 2;
-				_numberFormatter.useThousandsSeparator = true;
-
 				_updateTimer.addEventListener(TimerEvent.TIMER, timerHandler);
 				_updateTimer.start();
 			}
 			
 	        private function timerHandler(e:TimerEvent):void {
-				labelCurrentDownload.text = _numberFormatter.format(NetworkStatsData.getInstance().currentConsumedDownBW);
-			 	labelTotalDownload.text   = _numberFormatter.format(NetworkStatsData.getInstance().totalConsumedDownBW);
-			 	labelAvailableDownload.text   = _numberFormatter.format(NetworkStatsData.getInstance().measuredDownBW);
-			 	labelDownloadLatency.text   = String(NetworkStatsData.getInstance().measuredDownLatency);
+				labelCurrentDownload.text = NetworkStatsData.getInstance().formattedCurrentConsumedDownBW;
+			 	labelTotalDownload.text   = NetworkStatsData.getInstance().formattedTotalConsumedDownBW;
+			 	labelAvailableDownload.text   = NetworkStatsData.getInstance().formattedMeasuredDownBW;
+			 	labelDownloadLatency.text   = NetworkStatsData.getInstance().formattedMeasuredDownLatency;
 
-			 	labelCurrentUpload.text   = _numberFormatter.format(NetworkStatsData.getInstance().currentConsumedUpBW);
-			 	labelTotalUpload.text     = _numberFormatter.format(NetworkStatsData.getInstance().totalConsumedUpBW);
-			 	labelAvailableUpload.text   = _numberFormatter.format(NetworkStatsData.getInstance().measuredUpBW);
-			 	labelUploadLatency.text   = String(NetworkStatsData.getInstance().measuredUpLatency);
+			 	labelCurrentUpload.text   = NetworkStatsData.getInstance().formattedCurrentConsumedUpBW;
+			 	labelTotalUpload.text     = NetworkStatsData.getInstance().formattedTotalConsumedUpBW;
+			 	labelAvailableUpload.text   = NetworkStatsData.getInstance().formattedMeasuredUpBW;
+			 	labelUploadLatency.text   = NetworkStatsData.getInstance().formattedMeasuredUpLatency;
 	        }
         			
 			public function getPrefferedPosition():String {
@@ -84,37 +79,30 @@
 			}
 			
 			private function onResize():void {
-				LogUtil.debug("width=" + width + " height=" + height);
+				//LogUtil.debug("width=" + width + " height=" + height);
 			}
 			
-			public function appear():void {
+			public function appear(parent:DisplayObject):void {
 				var fader:Fade = new Fade();
 				fader.alphaFrom = 0;
 				fader.alphaTo = 1;
-				fader.duration = 500;
+				fader.duration = 750;
 				fader.target = this;
 //				fader.addEventListener(EffectEvent.EFFECT_START, function(e:EffectEvent):void {
-//					var windowEvent:OpenWindowEvent = new OpenWindowEvent(OpenWindowEvent.OPEN_WINDOW_EVENT);
-//					windowEvent.window = e.currentTarget as IBbbModuleWindow;
-//					_globalDispatcher.dispatchEvent(windowEvent);
+//					PopUpManager.addPopUp(e.effectInstance as IFlexDisplayObject, parent, false);
 //				});
 				fader.play();
-				var windowEvent:OpenWindowEvent = new OpenWindowEvent(OpenWindowEvent.OPEN_WINDOW_EVENT);
-				windowEvent.window = this;
-				_globalDispatcher.dispatchEvent(windowEvent);
-				this.windowManager.bringToFront(this);
+				PopUpManager.addPopUp(this, parent, false);
 			}
 			
 			public function disappear():void {
 				var fader:Fade = new Fade();
 				fader.alphaFrom = 1;
 				fader.alphaTo = 0;
-				fader.duration = 500;
+				fader.duration = 750;
 				fader.target = this;
 				fader.addEventListener(EffectEvent.EFFECT_END, function(e:EffectEvent):void {
-					var windowEvent:CloseWindowEvent = new CloseWindowEvent(CloseWindowEvent.CLOSE_WINDOW_EVENT);
-					windowEvent.window = e.target as IBbbModuleWindow;
-					_globalDispatcher.dispatchEvent(windowEvent);
+					PopUpManager.removePopUp(e.target as IFlexDisplayObject);
 				});
 				fader.play();
 			}
@@ -125,16 +113,16 @@
 	<mx:Panel width="100%" height="100%"
 	 paddingTop="10" paddingLeft="10" paddingRight="10" paddingBottom="10" headerHeight="10">
 		<mx:VBox verticalGap="0" width="100%" height="100%">
-			<mx:HBox backgroundColor="haloOrange" width="100%" horizontalAlign="center"><mx:Label fontWeight="bold" text="Upload"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Total: "/><mx:Label id="labelTotalUpload" fontWeight="bold" text="-"/><mx:Label text="MB"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Current: "/><mx:Label id="labelCurrentUpload" fontWeight="bold" text="-"/><mx:Label text="Kb/s"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Available: "/><mx:Label id="labelAvailableUpload" fontWeight="bold" text="-"/><mx:Label text="Mb/s"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Latency: "/><mx:Label id="labelUploadLatency" fontWeight="bold" text="-"/><mx:Label text="ms"/></mx:HBox>
-			<mx:HBox backgroundColor="haloOrange" width="100%" horizontalAlign="center"><mx:Label fontWeight="bold" text="Download"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Total: "/><mx:Label id="labelTotalDownload" fontWeight="bold" text="-"/><mx:Label text="MB"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Current: "/><mx:Label id="labelCurrentDownload" fontWeight="bold" text="-"/><mx:Label text="Kb/s"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Available: "/><mx:Label id="labelAvailableDownload" fontWeight="bold" text="-"/><mx:Label text="Mb/s"/></mx:HBox>
-			<mx:HBox horizontalGap="0"><mx:Label text="Latency: "/><mx:Label id="labelDownloadLatency" fontWeight="bold" text="-"/><mx:Label text="ms"/></mx:HBox>
+			<mx:HBox backgroundColor="haloOrange" width="100%" horizontalAlign="center"><mx:Label fontWeight="bold" text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.upload')}"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.total')}: "/><mx:Label id="labelTotalUpload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.current')}: "/><mx:Label id="labelCurrentUpload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.available')}: "/><mx:Label id="labelAvailableUpload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.latency')}: "/><mx:Label id="labelUploadLatency" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox backgroundColor="haloOrange" width="100%" horizontalAlign="center"><mx:Label fontWeight="bold" text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.download')}"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.total')}: "/><mx:Label id="labelTotalDownload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.current')}: "/><mx:Label id="labelCurrentDownload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.available')}: "/><mx:Label id="labelAvailableDownload" fontWeight="bold" text="-"/></mx:HBox>
+			<mx:HBox horizontalGap="0"><mx:Label text="{ResourceUtil.getInstance().getString('bbb.bwmonitor.latency')}: "/><mx:Label id="labelDownloadLatency" fontWeight="bold" text="-"/></mx:HBox>
 		</mx:VBox>
 	</mx:Panel>
 
